Use tree-shaking with mdi icons, fix overlay z-index

--- a/src/sass/helpers/_utility.scss
+++ b/src/sass/helpers/_utility.scss
@@ -64,3 +64,7 @@ a {
 .v-card__title {
   word-break: inherit;
 }
+
+.v-card {
+  position: inherit;
+}
